<resources>
    <string name="app_name">IPO Alerts - Allotments, Details and Alerts</string>
    <string name="watch_list">Watch List</string>
    <string name="allotments">Allotment Status</string>
    <string name="ipos">IPOs</string>
    <string name="issue_size">Issue Size:</string>
    <string name="price_range">Price Range:</string>
    <string name="retry">Retry!</string>
    <string name="offer_date">Offer Date:</string>
    <string name="closing_date">Closing Date:</string>
    <string name="lot_size">Lot Size:</string>
    <string name="no_data_available">No Data Available</string>
    <string name="secretary">Secretary:</string>
    <string name="face_value">Face Value:</string>
    <string name="search_ipo_allotment_status_with">Search IPO Allotment Status With</string>
    <string name="pan_card_number">PAN Card Number</string>
    <string name="application_number">Application Number</string>
    <string name="dp_client_id">DP Client ID</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_your_details"><![CDATA[Enter Your Details ->]]></string>
    <string name="name">Name:</string>
    <string name="allotted_shares">Allotted Shares:</string>
    <string name="amount_adjusted">Amount Adjusted:</string>
    <string name="applied_for">Applied For:</string>
    <string name="cutoff_price">CutOff Price:</string>
    <string name="no_records_found">No Records Found!!</string>
    <string name="minimum_price">Min. Investment</string>
    <string name="ipo_details">IPO Details</string>
    <string name="ipo_docs">Docs📂</string>
    <string name="app_rated">APP_RATED</string>
    <string name="worker_started">WORKER_STARTED</string>
    <string name="ipo_docs_text">IPO Docs</string>
    <string name="about_company">About Company</string>
    <string name="important_dates">Important Dates</string>
    <string name="listed_on">Listed on</string>
    <string name="issue_type">Issue Type</string>
    <string name="open_date">Open Date</string>
    <string name="close_date">Close Date</string>
    <string name="listing_date">Listing Date</string>
    <string name="subscription_rate">Subscription Rate</string>
    <string name="retail_individual_investor">Retail Individual Investor</string>
    <string name="non_institutional_investor">Non-Institutional Investor</string>
    <string name="qualified_institutional_buyers">Qualified Institutional Buyers</string>
    <string name="revenue">Revenue</string>
    <string name="year">Year</string>
    <string name="total_assets">Total Assets</string>
    <string name="profit">Profit</string>
    <string name="_2019">2019</string>
    <string name="_2020">2020</string>
    <string name="financials">Financials</string>
    <string name="managing_director">Managing Director</string>
    <string name="founded">Founded</string>
    <string name="parent_organisation">Parent Organisation</string>
    <string name="_2021">2021</string>
    <string name="in_crore">all values in Crore</string>
    <string name="n_a">N/A</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="back">Back</string>
    <string name="listing_details">Listing Details</string>
    <string name="issue_price">Issue Price</string>
    <string name="listing_price">Listing Price</string>
    <string name="listing_gains">Listing Gains</string>
    <string name="your_watchlist_is_empty_nplease_like_an_company_to_add_to_your_watchlist">Your WatchList is Empty \nPlease like an Company to add to your Watchlist</string>
    <string name="no_allotment_status_available_at_this_moment">No Allotment Status Available at this Moment</string>
</resources>