<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabs.allotment.searchallotment.SearchAllotmentFragment">

    <TextView
        android:id="@+id/company_name"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:maxLines="2"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o"
        tools:text="Sapphire Foods India Limited - IPO" />

    <TextView
        android:id="@+id/search_ipo_allotment_status_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/search_ipo_allotment_status_with"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_name" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/search_ipo_allotment_status_with">

        <RadioButton
            android:id="@+id/pan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pan_card_number"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/search_ipo_allotment_status_with" />

        <RadioButton
            android:id="@+id/application_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/application_number"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/pan" />

        <RadioButton
            android:id="@+id/dp_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dp_client_id"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/application_number" />
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/enter_your_details"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

    <ImageButton
        android:id="@+id/edit_paste_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_copy_paste"
        android:elevation="10dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@id/lets_go_button"
        app:layout_constraintEnd_toStartOf="@+id/lets_go_button"
        app:layout_constraintTop_toTopOf="@+id/lets_go_button" />

    <ImageButton
        android:id="@+id/lets_go_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_arrow_right"
        android:elevation="10dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_layout"
        app:layout_constraintTop_toTopOf="@+id/edit_text_layout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:clipToPadding="true"
        android:elevation="5dp"
        android:hint="@string/enter_details"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingEnd="100dp"
            android:scrollHorizontally="true"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="70dp" />


    <Button
        android:id="@+id/review_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/gold"
        android:clickable="true"
        android:focusable="true"
        android:stateListAnimator="@null"
        android:text="@string/rate_our_app"
        android:textColor="@color/black"
        android:translationZ="55dp"
        android:visibility="gone"
        app:elevation="55dp"
        app:icon="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/total_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/grey"
        android:visibility="gone"
        app:cardElevation="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:elevation="13dp"
                android:text="@string/back"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/result_card"
                app:layout_constraintTop_toBottomOf="@id/result_card" />

            <androidx.cardview.widget.CardView
                android:id="@+id/result_card"
                style="@style/CardBackground"
                android:layout_width="0dp"
                android:layout_height="500dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:clickable="true"
                android:focusable="true"

                app:cardCornerRadius="25dp"
                app:cardElevation="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/allotment_meme"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="happy_duck.json"
                        app:lottie_loop="true" />


                    <TextView
                        android:id="@+id/name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="20dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/name"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/allotment_meme" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/name_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/name_text"
                        app:layout_constraintTop_toTopOf="@id/name_text"
                        tools:text="ASHWIN MOORTHY " />


                    <TextView
                        android:id="@+id/allot_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/allotted_shares"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/name" />

                    <TextView
                        android:id="@+id/allot"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/allot_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/allot_text"
                        app:layout_constraintTop_toTopOf="@id/allot_text"
                        tools:text="186." />

                    <TextView
                        android:id="@+id/amt_adj_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"

                        android:text="@string/amount_adjusted"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/allot_text" />

                    <TextView
                        android:id="@+id/amt_adj"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/amt_adj_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/amt_adj_text"
                        app:layout_constraintTop_toTopOf="@id/amt_adj_text"
                        tools:text="18654545" />

                    <TextView
                        android:id="@+id/applied_for_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/applied_for"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/amt_adj_text" />

                    <TextView
                        android:id="@+id/applied_for"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/applied_for_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/applied_for_text"
                        app:layout_constraintTop_toTopOf="@id/applied_for_text"
                        tools:text="168" />

                    <TextView
                        android:id="@+id/cutoff_price_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/cutoff_price"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/applied_for_text" />

                    <TextView
                        android:id="@+id/cutoff_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/cutoff_price_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/cutoff_price_text"
                        app:layout_constraintTop_toTopOf="@id/cutoff_price_text"
                        tools:text="16800" />

                    <TextView
                        android:id="@+id/no_records_found"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_records_found"
                        android:textSize="25sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/allotment_meme" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/retry_allotment_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:text="@string/retry"
        android:visibility="gone"
        app:icon="@drawable/ic_reload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>